--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -8,7 +8,7 @@ sidebar:
 import {Aside} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
-Distr is an open source software distribution platform built for multiple [deployment scenarios](/docs/use-cases/fully-self-managed/). It enables software and AI companies to distribute applications and artifacts to customer-controlled environments.
+Distr is an open source software distribution platform built for multiple [deployment scenarios](/docs/use-cases/fully-self-managed/). It enables software and AI companies to distribute applications and artifacts to self-managed environments.
 
 Distr provides distribution tooling for [self-managed](/docs/use-cases/fully-self-managed/), [BYOC](/docs/use-cases/byoc/), [air-gapped](docs/use-cases/air-gapped/), and [edge deployments](/docs/use-cases/edge-deployments/) while giving vendors visibility and control throughout the application lifecycle.
 
