--- a/src/content/docs/docs/getting-started/core-concepts.mdx
+++ b/src/content/docs/docs/getting-started/core-concepts.mdx
@@ -19,28 +19,23 @@ Distr supports five distinct deployment models to meet different customer requir
 - **[Air-Gapped Environments](/docs/use-cases/air-gapped/)**: For high-security scenarios with physical or logical network isolation, offering secure artifact delivery through whitelisted connections or physical media.
 - **[Edge Deployments](/docs/use-cases/edge-deployments/)**: For vendor-controlled deployments to decentralized edge locations, IoT devices, or specialized hardware.
 
-Each model leverages Distr’s flexible architecture to strike the right balance of control, security, and operational efficiency, adapting to a wide range of end-customer needs.
-
 ## Key Components
 
-### Distr Hub
+### Vendor Portal
 
-[Distr Hub](/docs/product/distr-hub/) serves as the central control plane for managing customers, users, applications, and registry configurations. It includes monitoring and observability features, integrates smoothly with your CI/CD pipelines, and allows you to customize the customer portal.
+The [vendor portal](/docs/product/distr-hub/) is the central UI for the Distr control plane. It's where vendors manage customers, users, applications, and where you'll find the Artifacts Registry UI. The portal includes monitoring and observability features, integrates with your CI/CD pipelines, and lets you customize the customer portal.
 
-#### Distr Hub's Portal System
+### Customer Portal
 
-Two interfaces designed for different users:
-
-- **Vendor Portal**: Complete [vendor](docs/product/distr-hub/#what-vendors-can-do-in-the-vendor-portal) management console for software vendors
-- **Customer Portal**: Simplified, white-labeled interface for end [customers](/docs/product/distr-hub/#what-customers-can-do-in-the-customer-portal)
+The [customer portal](/docs/product/distr-hub/#what-customers-can-do-in-the-customer-portal) is a simplified, white-labeled UI built for end customers. It gives them control over deployments and access to the registry UI.
 
 ### Distr Registry
 
-[Distr Registry](/docs/product/registry/) is an OCI-compliant artifact registry that stores Docker images, Helm charts, and other OCI artifacts. It tracks artifact usage across customer environments and provides end customers with a private registry containing only the artifacts they’re licensed to use.
+[Distr Registry](/docs/product/registry/) is an OCI-compliant artifact registry that stores Docker images, Helm charts, and other OCI artifacts. It tracks artifact usage across customer environments and provides end customers with a private registry containing only the artifacts they’re licensed to use. Unlike other artifact registries, Distr’s includes a [UI](docs/product/registry/#artifacts-list) available in both the vendor and customer portals, making it easy to browse artifacts and inspect versions.
 
 ### Distr Agents
 
-[Distr Agents](/docs/product/agents/) are lightweight deployment agents that run in the customer’s target environment. They pull configurations from Distr Hub, execute deployment operations locally, and report status back to the vendor portal.
+[Distr Agents](/docs/product/agents/) are lightweight deployment agents that run in the customer’s target environment. They pull configurations from Distr's control plane (Distr Hub), execute deployment operations locally, and report status back to the vendor portal.
 
 ## API and Extensibility
 
