--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -17,7 +17,7 @@ Use it to publish versioned artifacts, enforce licensing rules, and track consum
 
 <Aside type="note">
   The Distr Artifact registry is a private registry, meaning that only
-  authenticated users can push and pull artifacts. Unauthenticated users will
+  [authenticated](/docs/guides/how-to-registry/#2-authenticate-with-a-personal-access-token) users via PAT can push and pull artifacts. Unauthenticated users will
   not be able to access your artifacts.
 </Aside>
 
@@ -35,13 +35,12 @@ Use it to publish versioned artifacts, enforce licensing rules, and track consum
 - **Open standards**: Built on the OCI specification and compatible with existing tooling (Docker, ORAS, Helm, etc.)
 - **Built-in licensing (beta)**: Bind artifact (versions) to licenses for fine-grained customer access control
 
-## Quickstart
+## Get started
 
-1. To start using the registry, choose a registry slug and log in.
-2. Tag and push your artifacts to the registry, you can manage this from the Artifacts section.
-3. Once stored, your artifacts can be assigned by other users and end-customers via their favorite registry CLI tool (Docker, ORAS, Kubernetes, etc.).
-4. Use the Downloads section to get granular artifact consumption analytics.
-5. To control access, create licenses that grant end customers permission to specific artifacts and versions.
+<Aside type="note">
+  If you haven’t set up your registry yet, start with the [in-platform tutorials](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials) or follow the [Quickstart Guide](/docs/guides/how-to-registry/).
+</Aside>
+
 
 Want a quick overview of how it works? Watch this short walkthrough:
 
@@ -61,9 +60,9 @@ Want a quick overview of how it works? Watch this short walkthrough:
   section.
 </Aside>
 
-## Registry Features
+## Artifact Registry UI
 
-### Artifacts List
+### Artifact List
 
 The Artifact List page lets you view all artifacts stored in your registry. It provides an overview of pull counts across all tags, along with insights into which users and customers are using each artifact.
 
@@ -98,98 +97,9 @@ The Downloads section shows a chronological list of all downloaded artifacts, in
   alt="Registry artifacts view"
 />
 
-<Aside type="note">
-  Using this information, you can see whether a user is running the latest
-  version of your software.
-</Aside>
-
-## Using the registry as a vendor
-
-### Getting started
-
-To enable the registry, you need to set a registry slug at the organization level. This only needs to be configured once in the Distr account settings.
-
-**Set Organization Slug**
-
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/light-slug.png"
-  darkSrc="/src/assets/docs/product/registry/dark-slug.png"
-  alt="Registry artifacts view"
-/>
-
-The slug will be used as part of the url for artifact registry.
-
-<Aside type="caution">
-  The registry slug must start with a lower case letter or digit and consist
-  only of lowercase letters, digits, as well as the following special
-  characters: **".","_","__","-"**.
-</Aside>
-
-#### Registry login
-
-To login to the registry, you will have to create a [personal access token (PAT)](/docs/integrations/personal-access-token/) and use it in the following login command:
-
-<Aside type="note">
-  The Distr artifact registry does not require a username when login in. The PAT
-  is directly associated with your user account.
-</Aside>
-
-```bash
-echo "YOUR-ACCESS-TOKEN" | docker login registry.distr.sh:8585 --password-stdin -u -
-```
-
-Then you can start tagging and pushing images to your account level registry.
-
-For example, you can try the following commands to push your own `hello-world` image:
-
-```bash
-docker pull hello-world
-docker tag hello-world registry.distr.sh/slug/hello-world:1.0.0
-docker push registry.distr.sh/slug/hello-world:1.0.0
-```
-
-### Artifact Licenses
-
-<Aside type="note">
-  Registry Licenses is available in beta. Contact us to get early access!
-</Aside>
-
-Registry licenses control which artifacts end customers can access, down to specific versions. A single license can include multiple artifacts and versions, and each customer can be associated with multiple licenses. Licenses can also have an expiration date, if none is set, the license remains valid indefinitely.
-
-#### Creating a License:
-
-To create a license, you'll:
-
-1. Give it a **name**
-2. Set an **expiration date**
-3. **Select the artifacts** you want to include
-4. **Choose the scope**. All tags, specific tags, or just a single tag
-5. **Assign the owner** this is the end customer the license is tied to
-
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/artifact-license-light.png"
-  darkSrc="/src/assets/docs/product/registry/artifact-license-dark.png"
-  alt="Registry artifacts view"
-/>
-
-<Aside type="note">
-  The scope of a license can't be reduced. So an artifact can't get unassigned
-  from a license.
-</Aside>
-
-## Using the registry as an end-customer
-
-The customer portal displays fewer details and icons, since end customers can only pull artifacts and view the versions they've been granted access to through their assigned artifact licenses. As noted above, once they [create a Personal Access Token and log in](#registry-login) to the registry, they'll be able to pull those artifacts.
-
-<ThemeImage
-  lightSrc="/src/assets/docs/product/registry/customer-artifact-view-light.png"
-  darkSrc="/src/assets/docs/product/registry/customer-artifact-view-dark.png"
-  alt="Registry artifacts view"
-/>
-
 ## Global Dashboard Artifact View
 
-The main Distr dashboard also provides a global view of which artifacts each end customer has consumed, including version details and a health status. For more information, refer to the sections mentioned earlier.
+The main Distr dashboard also provides a global view of which artifacts each end customer has consumed, including version details and a health status.
 
 <ThemeImage
   lightSrc="/src/assets/docs/product/registry/dashboard-artifact-view-light.png"
