chore:addressed last of Louis comments

--- a/src/content/docs/docs/product/registry.mdx
+++ b/src/content/docs/docs/product/registry.mdx
@@ -17,8 +17,9 @@ Use it to publish versioned artifacts, enforce licensing rules, and track consum
 
 <Aside type="note">
   The Distr Artifact registry is a private registry, meaning that only
-  [authenticated](/docs/guides/how-to-registry/#2-authenticate-with-a-personal-access-token) users via PAT can push and pull artifacts. Unauthenticated users will
-  not be able to access your artifacts.
+  [authenticated](/docs/guides/how-to-registry/#2-authenticate-with-a-personal-access-token)
+  users via PAT can push and pull artifacts. Unauthenticated users will not be
+  able to access your artifacts.
 </Aside>
 
 <ThemeImage
@@ -38,9 +39,10 @@ Use it to publish versioned artifacts, enforce licensing rules, and track consum
 ## Get started
 
 <Aside type="note">
-  If you haven’t set up your registry yet, start with the [in-platform tutorials](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials) or follow the [Quickstart Guide](/docs/guides/how-to-registry/).
+  If you haven’t set up your registry yet, start with the [in-platform
+  tutorials](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials)
+  or follow the [Quickstart Guide](/docs/guides/how-to-registry/).
 </Aside>
-
 
 Want a quick overview of how it works? Watch this short walkthrough:
 
