--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -14,7 +14,6 @@ Lightweight [Distr agents](/docs/product/agents/), installed by the customer in 
 
 The Customer Portal also allows end users, who may not be involved in initial deployment, to configure applications, monitor status, access logs, and trigger updates. This is especially useful in setups where a platform team deploys the application, but another team operates it day-to-day.
 
-
 ### Solution Architecture
 
 <ThemeImage
@@ -26,12 +25,13 @@ The Customer Portal also allows end users, who may not be involved in initial de
 ### Implementation steps
 
 <Steps>
-  1. **Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)**
-  2. **(Optional) Set Up Your [Registry](/docs/guides/how-to-registry/)** 
-  3. **White-label the [Customer portal](/docs/product/branding/)** 
-  4. **Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)** 
-  5. **Customer creates a [Personal Access token](/docs/integrations/personal-access-token/)** 
-  6. **Customer can [deploy your application via the Dist [agents](/docs/guides/end-customer-registry-view/#deployment-agent-quickstart-from-the-customer-portal)**
+  1. **Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)** 2.
+  **(Optional) Set Up Your [Registry](/docs/guides/how-to-registry/)** 3.
+  **White-label the [Customer portal](/docs/product/branding/)** 4. **Onboard
+  your first [customer](/docs/guides/onboarding-a-new-customer/)** 5. **Customer
+  creates a [Personal Access token](/docs/integrations/personal-access-token/)**
+  6. **Customer can [deploy your application via the Dist
+  [agents](/docs/guides/end-customer-registry-view/#deployment-agent-quickstart-from-the-customer-portal)**
 </Steps>
 
 <Aside type="tip">
