--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -21,12 +21,13 @@ Distr handles the entire deployment lifecycle in the customer's cloud account th
 />
 
 <Steps>
-  1. **Set Up Your [Registry](/docs/guides/how-to-registry/)** 
-  2. **Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)** 
-  3. **White-label the [Customer portal](/docs/product/branding/)** 
-  4. **Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)** 
-  5. **Access the customer's target environment** 
-  6. **Manage deployments and updates of your app directly for the customer using the [Distr agents](/docs/product/agents/)**
+  1. **Set Up Your [Registry](/docs/guides/how-to-registry/)** 2. **Onboard Your
+  [Application](/docs/guides/onboarding-a-helm-app/)** 3. **White-label the
+  [Customer portal](/docs/product/branding/)** 4. **Onboard your first
+  [customer](/docs/guides/onboarding-a-new-customer/)** 5. **Access the
+  customer's target environment** 6. **Manage deployments and updates of your
+  app directly for the customer using the [Distr
+  agents](/docs/product/agents/)**
 </Steps>
 
 <Aside type="tip">
