--- a/src/content/docs/docs/use-cases/fully-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/fully-self-managed.mdx
@@ -21,12 +21,14 @@ The Fully Self-Managed deployment model is designed for environments where third
 ### Implementation steps
 
 <Steps>
-  1. **Set Up Your [Registry](/docs/guides/how-to-registry/)** 
-  2. **Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)** 
-  3. **White-label the [Customer portal](/docs/product/branding/)** 
-  4. **Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)** 
-  5. **Customer creates a [Personal Access token](/docs/integrations/personal-access-token/)** 
-  6. **Customer can [access and pull](/docs/guides/end-customer-registry-view/#registry-quickstart-from-the-customer-portal) your private artifacts**
+  1. **Set Up Your [Registry](/docs/guides/how-to-registry/)** 2. **Onboard Your
+  [Application](/docs/guides/onboarding-a-helm-app/)** 3. **White-label the
+  [Customer portal](/docs/product/branding/)** 4. **Onboard your first
+  [customer](/docs/guides/onboarding-a-new-customer/)** 5. **Customer creates a
+  [Personal Access token](/docs/integrations/personal-access-token/)** 6.
+  **Customer can [access and
+  pull](/docs/guides/end-customer-registry-view/#registry-quickstart-from-the-customer-portal)
+  your private artifacts**
 </Steps>
 
 <Aside type="tip">
