--- a/src/content/docs/docs/product/customer-portal.mdx
+++ b/src/content/docs/docs/product/customer-portal.mdx
@@ -16,7 +16,7 @@ The customer portal is a simplified, white-labeled control plane UI built for en
   alt="Deployments interface"
 />
 
-The Customer Portal enables end customer to: 
+The Customer Portal enables end customer to:
 
 1. **Explore vendor-provided documentation**: The homepage serves as the end-customer’s landing pad, offering release notes, agent and registry instructions, helpful links, and support information. It’s the go-to place for understanding how to install and maintain the vendor’s software.
 
@@ -24,8 +24,10 @@ The Customer Portal enables end customer to:
 
 3. **Access and consume artifacts**: The _Artifacts_ section displays the software artifacts that have been enabled for the customer, along with instructions on how to pull and use them.
 
-4. **Generate access tokens**: In the top-right corner, the _Customer Settings_ area allows users to generate Personal Access Tokens (PATs), which are required for authenticating with the registry.
+4. **Generate access tokens**: In the top-right corner, the _Customer Settings_ area allows users to generate [Personal Access Tokens (PATs)](/docs/integrations/personal-access-token/), which are required for authenticating with the registry.
 
 <Aside type="note">
-  Understand what a typical user journey looks like in this [guide](/docs/guides/end-customer-registry-view/) on using Distr from the customer perspective.
+  Understand what a typical user journey looks like in this
+  [guide](/docs/guides/end-customer-registry-view/) on using Distr from the
+  customer perspective.
 </Aside>
