chore: improved page discriptions

--- a/src/content/docs/docs/guides/end-customer-registry-view.mdx
+++ b/src/content/docs/docs/guides/end-customer-registry-view.mdx
@@ -1,6 +1,6 @@
 ---
 title: End-customer view of Distr
-description: Learn how to authenticate and access artifacts as an end customer
+description: Guide for end customers on using the Customer Portal to access artifacts and deploy applications with Distr agents.
 sidebar:
   order: 7
 ---
