--- a/src/content/docs/docs/product/agents.mdx
+++ b/src/content/docs/docs/product/agents.mdx
@@ -1,6 +1,6 @@
 ---
 title: Deployment Agents
-description: Information on the Distr agents
+description: Overview of Distr deployment agents used to manage self-managed applications, including capabilities and agent types.
 sidebar:
   order: 2
 ---
