--- a/src/content/docs/docs/product/branding.mdx
+++ b/src/content/docs/docs/product/branding.mdx
@@ -1,6 +1,6 @@
 ---
 title: White-labeling the Customer Portal
-description: Configure the Customer Portal with your branding and content for end-user access.
+description: Apply custom branding and content to the Customer Portal, allowing end users to view release notes, deployment instructions, and operational guidance in a vendor-branded interface.
 sidebar:
   order: 6
 ---
